--- a/index.hbs
+++ b/index.hbs
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
   <title>{{htmlWebpackPlugin.options.title}}</title>
+  <link rel="stylesheet" href="css/main.css">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
 </head>
 <body>
 </body>
