--- a/CSS/main.css
+++ b/CSS/main.css
@@ -69,7 +69,7 @@
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         color: #4f4f4f
     }
-    .friends_list{
+    .friends{
         list-style: none;
         padding: 0;
         margin: 0;
