--- a/index.hbs
+++ b/index.hbs
@@ -32,16 +32,8 @@
                                 Ваши друзья
                                 <hr style="border-width: 0.5px; width:90%" >
                             </div>
-                            <script type="text/x-handlebars-template" id="user-template">
-                              <ul class="friends" id="results">
-                                {{#each items}}
-                                  <li class="friend" >
-                                      <img src="{{photo_100}}">
-                                      <div>{{first_name}} {{last_name}}</div>
-                                  </li>
-                                {{/each}}
-                              </ul>
-                            </script>
+                            <div class="friends">
+                            </div>
                         </div>
                         <hr noshade style="width: 0.5px;border-color:#f0f0f0">
                             <div class="filter__content-column--right">
