--- a/index.hbs
+++ b/index.hbs
@@ -41,8 +41,8 @@
                                   Друзья в списке
                                   <hr style="border-width: 0.5px; width:90%" >
                                 </div>
-                                <ul class="friends_list">    
-                                </ul>
+                                <div class="friends_right" draggable="true" id="drop_end" ondragenter='dragEnter(event)' ondrop="dragDrop(event)" ondragover="dragOver(event)">    
+                                </div>
                             </div>
                     </div>
                 </div>
