--- a/CSS/main.css
+++ b/CSS/main.css
@@ -63,9 +63,7 @@
     }
     .filter_title{
         text-align: center;
-        height: 20%;
         margin-top: 2%;
-        margin-bottom: 2%;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         color: #4f4f4f
     }
@@ -73,11 +71,48 @@
         list-style: none;
         padding: 0;
         margin: 0;
+        overflow-y: scroll;
+        height: 200px; /* высота нашего блока */
+        border: none;
     }
+    .friends_right{
+        height: 100%;
+    }
+    ::-webkit-scrollbar-button {
+        background-image:url('');
+        background-repeat:no-repeat;
+        width:5px;
+        height:0px
+        }
+        
+        ::-webkit-scrollbar-track {
+        background-color:#ffffff
+        }
+        
+        ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background-color:#c4c4c4;
+        }
+        
+        ::-webkit-scrollbar-thumb:hover{
+        background-color:#c4c4c4    ;
+        }
+        
+        ::-webkit-resizer{
+        background-image:url('');
+        background-repeat:no-repeat;
+        width:4px;
+        height:0px
+        }
+        
+        ::-webkit-scrollbar{
+        width: 4px;
+        }
     .friend{
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
     }
     .name{
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -89,8 +124,6 @@
         width: 50%;
         display: flex;
         flex-direction: column;
-    }
-    .avatar{
     }
     .avatar_img{
         border-radius: 50%;
