--- a/CSS/main.css
+++ b/CSS/main.css
@@ -131,6 +131,7 @@
         object-fit: cover;
         margin-left: 5%;
         margin-top: 5%;
+        width: 70%;
     }
     .list_button{
         margin-right: 4%;
